# Loom

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
shaders/: triangle.vert
src/: main.cpp
src/editor/: app.cpp  app.hpp  main.cpp
